    Closes: #618320
  * Add mipsel/loongson-2f images.
  * When building for a subarchitecture, don't include udebs for other
    subarchitectures in standard-udebs.
  * Document move of /dev/.udev/firmware-missing to
    /run/udev/firmware-missing in hw-detect 1.87.
  * Handle udebs installing libraries into /usr/lib/$(DEB_HOST_MULTIARCH).

  [ Joey Hess ]
  * Work around binutils breakage (#623710) that broke mklibs,
    by using mklibs-copy.
    Of course this means larger images, and should be reverted ASAP.
  * Revert use of mklibs-copy, as breakage seems fixed (tested on i386 and
    amd64). Closes: #624144

  [ Aurelien Jarno ]
  * Add virtio udebs on s390/generic and s390/netboot.

  [ Robert Millan ]
  * Enable netboot-gtk flavor on kfreebsd-amd64. Closes: #596596
  * control: Use "any" architecture wildcards where possible.

  [ Didier Raboud ]
  * Include win32-loader's setup.exe on kfreebsd.

  [ dann frazier ]
  * Add pata-modules to cdrom config for ia64. Closes: #622187.

  [ Otavio Salvador ]
  * i386 (xen): use 686-pae flavour
  * Switch Linux kernel to 2.6.39 (ABI 2).

  [ Joey Hess ]
  * Apply internal documentation typo and wording fix patch from
    Karl Goetz. Closes: #633606

  [ Otavio Salvador ]
  * Update Linux kernel to 3.0.0-1

 -- Robert Millan <rmh@debian.org>  Fri, 15 Jul 2011 23:34:48 +0200

debian-installer (20110106) unstable; urgency=low

  * Use SpaceFun theme. Closes #603554.
  * Update Linux kernel to 2.6.32-29.

 -- Otavio Salvador <otavio@debian.org>  Thu, 06 Jan 2011 09:37:41 -0200

debian-installer (20101127) unstable; urgency=low

  [ Christian Perrier ]
  * Add pata-modules to powerpc builds to properly support
    YDL Powerstation. Thanks to Milan Kupcevic. Closes: #603893
  * Add ttf-lao-udeb to graphical installer to properly support the Lao
    language

 -- Otavio Salvador <otavio@debian.org>  Sat, 27 Nov 2010 15:18:28 -0200

debian-installer (20101121) unstable; urgency=low

  [ Otavio Salvador ]