@@ -487,8 +487,10 @@ endif
 	rm -rf $(TEMP)/udeblibs
 ifndef ONLY_KLIBC
 	mkdir -p $(TEMP)/udeblibs
-	-cp -a `find $(EXTRAUDEBSDIR)/lib -name '*.so.*'` $(TEMP)/udeblibs
-	-cp -a `find $(TREE)/lib -name '*.so.*'` $(TEMP)/udeblibs
+	find $(EXTRAUDEBSDIR)/lib -name '*.so.*' -print0 | \
+		xargs -0r cp -a -t $(TEMP)/udeblibs
+	find $(TREE)/lib -name '*.so.*' -print0 | \
+		xargs -0r cp -a -t $(TEMP)/udeblibs
 	mkdir -p $(TREE)/lib
 	# HACK ALERT: X.Org modules are excluded from the scan as mklibs
 	# is unable to find symbols provided by the /usr/bin/Xorg binary
