@@ -59,6 +59,8 @@ debian-installer (2011xxxx) UNRELEASED; urgency=low
   * Document move of /dev/.udev/firmware-missing to
     /run/udev/firmware-missing in hw-detect 1.87.
   * Handle udebs installing libraries into /usr/lib/$(DEB_HOST_MULTIARCH).
+  * Don't emit spurious errors if there are no files in $(EXTRAUDEBSDIR)/lib
+    or no files in $(TREE)/lib.
 
   [ Joey Hess ]
   * Work around binutils breakage (#623710) that broke mklibs,
